--- a/src/collective/documentfusion/locales/fr/LC_MESSAGES/collective.documentfusion.po
+++ b/src/collective/documentfusion/locales/fr/LC_MESSAGES/collective.documentfusion.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2014-06-26 09:42+0000\n"
+"POT-Creation-Date: 2017-06-01 21:03+0000\n"
 "PO-Revision-Date: 2014-02-04 10:28+0100\n"
 "Last-Translator: Thomas Desvenain <thomasdesvenain@ecreall.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,47 +15,122 @@ msgstr ""
 "Domain: DOMAIN\n"
 "X-Generator: Poedit 1.5.4\n"
 
-#: ../browser/views.py:78
-msgid "Document generation failed, please retry document generation or contact your administrator..."
-msgstr "La génération du document a échoué, veuillez réessayer la génération ou contacter votre administrateur"
+#: ../interfaces.py:133
+msgid "Automatic refresh enabled"
+msgstr "Rafraîchissement automatique activé"
 
-#: ../browser/views.py:42
+#: ../interfaces.py:134
+msgid "Automatic refresh of generated files is enabled"
+msgstr "Le rafraîchissement automatique des fichiers générés est activé"
+
+#: ../interfaces.py:113
+msgid "Conversion service host"
+msgstr "Hôte du service de conversion"
+
+#: ../interfaces.py:108
+msgid "Conversion service port"
+msgstr "Port du service de conversion"
+
+#: ../browser/views.py:43
 msgid "Document generation failed, please retry or contact your administrator"
 msgstr "La génération du document a échoué, veuillez réessayer ou contacter votre administrateur"
 
-#: ../browser/views.py:75
-msgid "Document generation in progress, please retry later..."
-msgstr "Génération du document en cours, veuillez réessayer plus tard..."
+#: ../interfaces.py:139
+msgid "For development or test mode"
+msgstr "Pour le développement ou les tests"
 
-#: ../browser/views.py:48
+#: ../interfaces.py:123
+msgid "Fusion service host"
+msgstr "Hôte du service de fusion"
+
+#: ../interfaces.py:118
+msgid "Fusion service port"
+msgstr "Port du service de fusion"
+
+#: ../interfaces.py:128
+msgid "Fusion service timeout"
+msgstr "Timeout du service de fusion"
+
+#: ../configure.zcml:62
+msgid "Generates a PDF version of the main file of the content. Combined with Document fusion behavior, the pdf is generated with a fusion with content fields."
+msgstr "Génère une version PDF du fichier principal du contenu. Combiné avec Fusion du document, le pdf sera généré avec une fusion avec les champs du contenu"
+
+#: ../browser/views.py:29
 msgid "Get the generated file."
 msgstr "Télécharger le document généré"
 
-#: ../interfaces.py:60
-msgid "LibreOffice host"
-msgstr "Hôte de LibreOffice"
+#: ../configure.zcml:35
+msgid "Installs the collective.documentfusion add-on."
+msgstr "Installe le module collective.documentfusion"
 
-#: ../interfaces.py:57
-msgid "LibreOffice port"
-msgstr "Port de LibreOffice"
-
-#: ../browser/views.py:81
+#: ../browser/views.py:22
 msgid "No document generated here"
 msgstr "Aucun document généré à télécharger"
 
-#: ../browser/views.py:37
-msgid "Processing document generation, please refresh the page..."
-msgstr "Génération du document en cours, veuillez rafraîchir la page..."
+#: ../interfaces.py:138
+msgid "Prevent using async document generation"
+msgstr "Désactive l'utilisation de la génération asynchrone"
+
+#: ../browser/views.py:36
+msgid "Processing document generation..."
+msgstr "Génération du document en cours..."
+
+#: ../browser/viewlet.pt:15
+msgid "Refresh document"
+msgstr "Mettre à jour le document généré"
 
 #: ../profiles/default/actions.xml
 msgid "Refresh generated document"
 msgstr "Mettre à jour le document généré"
 
-#: ../interfaces.py:61
-msgid "The hostname from where LibreOffice is served"
-msgstr "Le nom de l'hôte (host) du service LibreOffice"
+#: ../testing.zcml:16
+msgid "Steps to ease tests of collective.documentfusion"
+msgstr ""
 
-#: ../interfaces.py:58
-msgid "The port used by LibreOffice service"
-msgstr "Le port utilisé par le service Libreoffice"
+#: ../interfaces.py:124
+msgid "The hostname from where py3o.fusion is served"
+msgstr "Le nom de l'hôte où py3o.fusion est accessible"
 
+#: ../interfaces.py:114
+msgid "The hostname from where py3o.renderserver is served"
+msgstr "Le nom de l'hôte où py3o.renderserver est accessible"
+
+#: ../interfaces.py:129
+msgid "The maximum time (in seconds) the worker will wait for py3o.fusion service response."
+msgstr "La durée maximale où le worker attend la réponse de py3o.fusion (en secondes)"
+
+#: ../interfaces.py:119
+msgid "The port used by py3o.fusion service"
+msgstr "Le port utilisé par le service py3o.fusion"
+
+#: ../interfaces.py:109
+msgid "The port used by py3o.renderserver service"
+msgstr "Le port utilisé par le service py3o.renderserver"
+
+#: ../configure.zcml:50
+msgid "We generate a fusion of the file field of the document with other fields of the document."
+msgstr ""
+
+#: ../configure.zcml:56
+msgid "We generate a pdf merge of fusions of the file field of the document with the field each document related items."
+msgstr ""
+
+#: ../configure.zcml:35
+msgid "collective.documentfusion"
+msgstr ""
+
+#: ../testing.zcml:16
+msgid "collective.documentfusion tests"
+msgstr ""
+
+#: ../configure.zcml:50
+msgid "collective.documentfusion: Document fusion"
+msgstr ""
+
+#: ../configure.zcml:56
+msgid "collective.documentfusion: Merged document fusion"
+msgstr ""
+
+#: ../configure.zcml:62
+msgid "collective.documentfusion: PDF Generation"
+msgstr ""
